--- a/htdocs/css/kmom01.css
+++ b/htdocs/css/kmom01.css
@@ -5,6 +5,17 @@
  * to style up the website so it is useable.
  */
 
+/* Poor-mans normalize */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    background-color: #181A1B;
+}
+
 /* Hide submenu, leave this to kmom02 */
 .rm-desktop ul {
     display: none;
@@ -13,4 +24,145 @@
 /* Hide responsive/mobile menu, leave this to kmom02 */
 .rm-navbar-max {
     display: none;
+}
+
+/* Container */
+.wrap-all {
+    background-color: #27292B;
+    color: white;
+}
+
+.outer-wrap {
+    width: 100%;
+    overflow: auto;
+}
+
+.inner-wrap {
+    width: 80%;
+    margin: 0 auto;
+}
+
+a {
+    color: white;
+}
+
+li {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.row::after {
+    clear: both;
+}
+
+/* Header */
+.region-header-col-1 {
+    float: left;
+    width: 30%;
+    margin-right: 10px;
+}
+
+.region-header-col-2 {
+    float: left;
+    width: 60%;
+}
+
+.site-logo {
+    display: none;
+}
+
+.my-navbar {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    /*background-color: #38383d; */
+    text-transform: uppercase;
+    width: 100%;
+}
+
+
+.my-navbar a {
+    display: inline;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    color: white;
+    /*color: rgb(227, 227, 227);*/
+}
+
+.my-navbar a:hover {
+    background-color: rgb(119, 119, 119);
+    text-decoration: underline;
+}
+
+/* Main */
+
+.inner-wrap-main {
+    padding: 30px 0;
+}
+
+.region-main {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.region-main .block {
+    margin-top: 20px;
+    border-top: 1px solid #fff;
+}
+
+.region-main .block p {
+    float: left;
+    width: 850px;
+    margin: 20px 30px;
+}
+
+.byline-pic {
+    float: right;
+}
+
+.byline,
+.block h1
+{
+    color: rgb(196, 193, 193);
+}
+
+.block {
+    clear: both;
+}
+
+/* Footer */
+.outer-wrap-footer {
+    background-color: #007;
+    color: white;
+}
+
+.inner-wrap-footer {
+    padding: 30px 0;
+}
+
+.region-footer>.block {
+    padding-top: 30px;
+    width: 100%;
+    text-align: center;
+}
+
+
+.profilbild {
+    float: right;
+    overflow: auto;
+    display: block;
+}
+
+.inner-wrap-main p {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.region-flash img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
 }
